--- a/store.html
+++ b/store.html
@@ -7,7 +7,7 @@
 </head>
 <body background="https://wallpaperaccess.com/full/1794110.jpg">
 <div class="div-logo" align="center">
-	<img src="main/logo.png">
+	<img src="logo.png">
 	<ul class="ul-nav1">
 		<a href="index.html"><li class="ul-text">Home</li></a>
 		<a href="store.html"><li class="ul-text">Store</li></a>
