--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<script src="https://shoppy.gg/api/embed.js"></script>
 </head>
 <body background="https://wallpaperaccess.com/full/1794110.jpg">
 <div class="div-logo" align="center">
@@ -27,7 +28,7 @@
 <b>Minecraft Account<br> (Full Access)</b>
 <h3>
 	<p class="desc">Price: 5€</p>
-	<button class="buy">Buy Now!</button>
+	<button data-shoppy-product="Io5t7kI" class="buy">Buy Now!</button>
 </div>
 <div align="center" class="div-prod">
 <h3>
