--- a/store.html
+++ b/store.html
@@ -25,9 +25,9 @@
 <br>
 <div align="center" class="div-prod">
 <h3>
-<b>Minecraft Account<br> (Full Access)</b>
+<b>Minecraft Account With OG Name<br> (Full Access)</b>
 <h3>
-	<p class="desc">Price: 5€</p>
+	<p class="desc">Price: 15€</p>
 	<button data-shoppy-product="Io5t7kI" class="buy">Buy Now!</button>
 </div>
 <div align="center" class="div-prod">
